# robotic_course

robot_autonomy/robot_local_localization/: package.xml  setup.py
robot_autonomy/robot_local_localization/launch/: local_localization.launch.py
robot_autonomy/robot_local_localization/robot_local_localization/: ekf_node.py  measurement_node.py  prediction_node.py  test_node.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: gazebo.launch.py
robot_description/scripts/: cmd_vel_to_rpm.cpp
robot_description/src/description/: lidar.xacro  robot.urdf  robot.urdf.xacro
robot_description/src/description/robot/: robot.usd
robot_description/src/description/robot/configuration/: robot_physics.usd  robot_sensor.usd
robot_description/world/: depot.sdf
